--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,7 @@
 body {
     height: 100vh;
     color: #fff;
+    background-color: #1C1C1C;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
     text-align: center;
